PWARE-128 Remove ConsulteeGroupMemberRole from PwaApplicationPermission (#115)
* PWARE-126 Migrate to teams pattern and remove return of person

* Add tests for retrieving team members by role and scope in TeamQueryServiceTest

* PWARE-128 Remove ConsulteeGroupMemberRole from PwaApplicationPermission

* Add unit tests for getMembersOfScopedTeamWithRoleIn

* Add UserTeamRolesView

* Fix misc tests